test/tests/stages/18_structures/invalid_types/invalid_struct_declaration/incomplete_member.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[0]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: a
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: g
            Structure: 
              TIdentifier: s
              Bool: 0
